[tool.poetry]
name = "gallery"
version = "0.1.0"
description = ""
authors = ["John Leen <jleen@saturnvalley.org>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.0.1"
Pillow = "^9.3.0"
ExifRead = "^2.3.2"
imagesize = "^1.2.0"
MarkupSafe = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gallery = "gallery.staticgen:staticgen"
